# coreutil-r

./: .gitignore  .replit  build.sh  done.txt  target_list.txt  test.txt
coreutil-source/: Cargo.toml  build.sh  random.txt  test.tst  test.txt
coreutil-source/arch/: Cargo.toml
coreutil-source/b2sum/: Cargo.toml
coreutil-source/base32_/: Cargo.toml
coreutil-source/base64_/: Cargo.toml
coreutil-source/basename/: Cargo.toml
coreutil-source/basenc/: Cargo.toml
coreutil-source/cat/: Cargo.toml
coreutil-source/cat-copy/: Cargo.toml
coreutil-source/chcon/: Cargo.toml
coreutil-source/chgrp/: Cargo.toml
coreutil-source/chmod/: Cargo.toml
coreutil-source/chown/: Cargo.toml
coreutil-source/chroot/: Cargo.toml
coreutil-source/cksum/: Cargo.toml
coreutil-source/comm/: Cargo.toml
coreutil-source/common/: Cargo.toml
coreutil-source/cp/: Cargo.toml
coreutil-source/csplit/: Cargo.toml
coreutil-source/cut/: Cargo.toml
coreutil-source/date/: Cargo.toml
coreutil-source/dd/: Cargo.toml
coreutil-source/df/: Cargo.toml
coreutil-source/dir/: Cargo.toml
coreutil-source/dircolors/: Cargo.toml
coreutil-source/dirname/: Cargo.toml
coreutil-source/du/: Cargo.toml
coreutil-source/echo/: Cargo.toml
coreutil-source/env/: Cargo.toml
coreutil-source/expand/: Cargo.toml
coreutil-source/expr/: Cargo.toml
coreutil-source/factor/: Cargo.toml
coreutil-source/false/: Cargo.toml
coreutil-source/fmt/: Cargo.toml
coreutil-source/fold/: Cargo.toml
coreutil-source/ginstall/: Cargo.toml
coreutil-source/groups/: Cargo.toml
coreutil-source/head/: Cargo.toml
coreutil-source/hostid/: Cargo.toml
coreutil-source/id/: Cargo.toml
coreutil-source/install/: Cargo.toml
coreutil-source/join/: Cargo.toml
coreutil-source/kill/: Cargo.toml
coreutil-source/link/: Cargo.toml
coreutil-source/ln/: Cargo.toml
coreutil-source/logname/: Cargo.toml
coreutil-source/ls/: Cargo.toml
coreutil-source/md5sum/: Cargo.toml
coreutil-source/mkdir/: Cargo.toml
coreutil-source/mkinfo/: Cargo.toml
coreutil-source/mknod/: Cargo.toml
coreutil-source/mktmp/: Cargo.toml
coreutil-source/mv/: Cargo.toml
coreutil-source/nice/: Cargo.toml
(+83 files in other folders)
