[workspace]
resolver = "2"
members = [
  "chcon",
  "chgrp",
  "chown",
  "chmod",
  "cp",
  "dd",
  "df",
  "dir",
  "dircolors",
  "install",
  "ln",
  "ls",
  "mkdir",
  "mkinfo",
  "mknod",
  "mktmp",
  "mv",
  "realpath",
  "rm",
  "rmdir",
  "shred",
  "sync",
  "touch",
  "truncate",
  "vdir",
  "b2sum",
  "base32_",
  "base64_",
  "cat",
  "cksum",
  "comm",
  "csplit",
  "cut",
  "expand",
  "fmt",
  "fold",
  "head",
  "join",
  "md5sum",
  "nl",
  "numfmt",
  "od",
  "paste",
  "ptx",
  "pr",
  "sha1sum",
  "sha224sum",
  "sha256sum",
  "sha384sum",
  "sha512sum",
  "shuf",
  "sort",
  "split",
  "sum",
  "tac",
  "tail",
  "tr",
  "tsort",
  "unexpand",
  "uniq",
  "wc",
  "arch",
  "basename",
  "chroot",
  "date",
  "dirname",
  "du",
  "echo",
  "env",
  "expr",
  "factor",
  "false",
  "groups",
  "hostid",
  "id",
  "link",
  "logname",
  "nice",
  "nohup",
  "nproc",
  "pathchk",
  "pinky",
  "printenv",
  "printf",
  "pwd",
  "readlink",
  "runcon",
  "seq",
  "sleep",
  "stat",
  "stdbuf",
  "stty",
  "tee",
  "test",
  "timeout",
  "true",
  "tty",
  "uname",
  "users",
  "unlink",
  "uptime",
  "users",
  "who",
  "whoami",
  "yes",
  "common"
, "basenc", "ginstall", "kill"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
