[package]
name = "sha384sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
data-encoding = "2.5.0"
ring = "0.17.7"
common = { version = 0.1.0, path = ../common }
